--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
 <head>
-<title>peer2penguin</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>peer2penguin</title>
+  <meta name="description" content="GitHub Pages site for peer2penguin">
+  <meta name="author" content="Penguin Coding">
+
+  <meta property="og:title" content="peer2penguin">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="GitHub Pages site for peer2penguin">
+  <meta property="og:image" content="image.png">
+  <link rel="icon" href="https://github.com/penguincodingschool/assets/raw/36da210c3c17ca442af19b3f28ab8a2b91519b8b/favicon.png" type="image/png">
+  <!-- when these exist
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  -->
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body style="padding: 1em 20% 1em 20%;">
 <h1>placeholder</h1>
