--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
 </head>
 <body style="padding: 1em 20% 1em 20%;">
-<h1>placeholder</h1>
-<p>github pages test</p>
+<h1>peer2penguin</h1>
+  <p>peer2penguin is the name of a PeerJS wrapper that allows you to use three variables in the global namespace: <code>incomingDict</code>, <code>outgoingDict</code>, and <code>iAmHost</code>.</p>
+  <p><code>iAmHost</code> is a boolean that is updated to <code>false</code> if you connect to a remote Peer's ID. </p>
+  <p><code>incomingDict</code> is a JS object that holds the data that your peer has sent you. It updates every 10ms.</p>
+  <p><code>outgoingDict</code> is a JS object that holds the data that you are sending your peer. It updates every 10ms.</p>
 </body>
 </html>
