--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 <h1>peer2penguin</h1>
   <p>peer2penguin is the name of a PeerJS wrapper that allows you to use three variables in the global namespace: <code>incomingDict</code>, <code>outgoingDict</code>, and <code>iAmHost</code>.</p>
   <p>It places a little orange arrow at the top of your screen that tells you your "room ID" and allows you to connect to others' rooms. Room IDs are assigned at random, chosen between 1 and 256, and sometimes collide or are unavailable. If your room ID says "loading..." for more than 3 seconds, refresh the page. Then, you will be able to connect to a remote Peer as a non-Host, sending data every 10ms.</p>
+  <p>Paste these <code>&lt;script&gt;</code> tags at the end of your <code>&lt;body&gt;</code>:<br>
+    <code style="font-size: 1em">
+      &lt;script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"&gt;&lt;/script&gt;
+      &lt;script src="https://penguincodingschool.github.io/peer2penguin/script.js" onload="init()"&gt;&lt;/script&gt;
+    </code>
   <p><code>iAmHost</code> is a boolean that is updated to <code>false</code> if you connect to a remote Peer's ID. </p>
   <p><code>incomingDict</code> is a JS object that holds the data that your peer has sent you. It updates every 10ms.</p>
   <p><code>outgoingDict</code> is a JS object that holds the data that you are sending your peer. It updates every 10ms.</p>
