add evader link

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
   <p><code>outgoingDict</code> is a JS object that holds the data that you are sending your peer. It updates every 10ms.</p>
   <h2>examples on repl.it</h2>
   <p><a href="https://p2p-pong.luiscollado2.repl.co/">pong</a></p>
+  <p><a href="https://p2p-box-game.luiscollado2.repl.co/">evader</a></p>
 </body>
 </html>
